--- a/client/SpiritDirectorTable.html
+++ b/client/SpiritDirectorTable.html
@@ -26,7 +26,7 @@
                 <ul class="navbar-nav text-light" id="accordionSidebar">
                     <li class="nav-item"><a class="nav-link" href="index.html"><i class="fa fa-home"></i><span>Home</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="calendar.html"><i class="fa fa-calendar"></i><span>Calendar</span></a></li>
-                    <li class="nav-item"><a class="nav-link active" href="table.html"><i class="fas fa-table"></i><span>Table</span></a></li>
+                    <li class="nav-item"><a class="nav-link active" href="SpiritDirectorTable.html"><i class="fas fa-table"></i><span>Table</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="login.html"><i class="far fa-user-circle"></i><span>Login</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="register.html"><i class="fas fa-user-circle"></i><span>Register</span></a></li>
                     <li class="nav-item"></li>
@@ -35,7 +35,7 @@
             </div>
         </nav>
         <div class="d-flex flex-column" id="content-wrapper">
-            <div id="content">
+            <div id="content" style="margin-right: 5px;">
                 <nav class="navbar navbar-light navbar-expand bg-white shadow mb-4 topbar static-top">
                     <div class="container-fluid"><button class="btn btn-link d-md-none rounded-circle mr-3" id="sidebarToggleTop" type="button"><i class="fas fa-bars"></i></button>
                         <ul class="navbar-nav flex-nowrap ml-auto">
@@ -48,6 +48,7 @@
                                     </form>
                                 </div>
                             </li>
+
                             <div class="d-none d-sm-block topbar-divider"></div>
                             <li class="nav-item dropdown no-arrow">
                                 <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown" href="#"><span class="d-none d-lg-inline mr-2 text-gray-600 small">Riley Durbin</span><img class="border rounded-circle img-profile" src="assets/img/avatars/Riley-headshot.jpg"></a>
@@ -60,11 +61,20 @@
                     </div>
                 </nav>
                 <div class="container-fluid">
-                    <h3 class="text-dark mb-4">Team</h3>
-                    <div class="card shadow">
-                        <div class="card-header py-3">
-                            <p class="text-primary m-0 font-weight-bold">Employee Info</p>
+                    <h3 class="text-dark mb-4" style="color: var(--purple);">Current Customer Information</h3>
+                    <div class="card" style="margin-bottom: 10px;">
+                        <div class="card-body">
+                            <h4 class="card-title" style="font-size: 18px;">Add a new customer here:</h4>
+                            <form class="d-lg-flex justify-content-lg-center">
+                                <input class="form-control" id="id" type="text" placeholder="ID" style="margin-left: 5px;">
+                                <input class="form-control" id="name" type="text" placeholder="Name" style="margin-left: 5px;">
+                                <input class="form-control" id="tel" type="text" placeholder="Phone" style="margin-left: 5px;">
+                                <input class="form-control" id="email" type="text" placeholder="Email" style="margin-left: 5px;">
+                                <button id="btn_add" class="btn btn-primary" type="button" style="margin-left: 5px;background: rgb(68,180,50);">Add</button>
+                            </form>
                         </div>
+                    </div>
+                    <div class="card shadow">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-6 text-nowrap">
@@ -83,119 +93,55 @@
                                 <table class="table my-0" id="dataTable">
                                     <thead>
                                         <tr>
+                                            <th>ID</th>
                                             <th>Name</th>
-                                            <th>Position</th>
-                                            <th>Office</th>
-                                            <th>Age</th>
-                                            <th>Start date</th>
-                                            <th>Salary</th>
+                                            <th>Phone</th>
+                                            <th>Email</th>
+                                            <th class="text-left">Operation</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td><img class="rounded-circle mr-2" width="30" height="30" src="assets/img/avatars/avatar1.jpeg">Airi Satou</td>
-                                            <td>Accountant</td>
-                                            <td>Tokyo</td>
-                                            <td>33</td>
-                                            <td>2008/11/28</td>
-                                            <td>$162,700</td>
+                                            <td>1</td>
+                                            <td>James Watson</td>
+                                            <td>123-456-7890</td>
+                                            <td>jameswatson@gmail.com</td>
+                                            <td class="text-center d-lg-flex justify-content-lg-center">
+                                                <button class="btn btn-primary" type="button" style="margin-left: 0px;margin-right: 5px;">Edit</button>
+                                                <button class="btn btn-primary" type="button" style="margin-right: 5px;background: var(--red);" href="javascript:void(0);" onclick="delTr(this);"></a>Delete</button>
+                                            </td>
                                         </tr>
                                         <tr>
-                                            <td><img class="rounded-circle mr-2" width="30" height="30" src="assets/img/avatars/avatar2.jpeg">Angelica Ramos</td>
-                                            <td>Chief Executive Officer(CEO)</td>
-                                            <td>London</td>
-                                            <td>47</td>
-                                            <td>2009/10/09<br></td>
-                                            <td>$1,200,000</td>
-                                        </tr>
-                                        <tr>
-                                            <td><img class="rounded-circle mr-2" width="30" height="30" src="assets/img/avatars/avatar3.jpeg">Ashton Cox</td>
-                                            <td>Junior Technical Author</td>
-                                            <td>San Francisco</td>
-                                            <td>66</td>
-                                            <td>2009/01/12<br></td>
-                                            <td>$86,000</td>
-                                        </tr>
-                                        <tr>
-                                            <td><img class="rounded-circle mr-2" width="30" height="30" src="assets/img/avatars/avatar4.jpeg">Bradley Greer</td>
-                                            <td>Software Engineer</td>
-                                            <td>London</td>
-                                            <td>41</td>
-                                            <td>2012/10/13<br></td>
-                                            <td>$132,000</td>
-                                        </tr>
-                                        <tr>
-                                            <td><img class="rounded-circle mr-2" width="30" height="30" src="assets/img/avatars/avatar5.jpeg">Brenden Wagner</td>
-                                            <td>Software Engineer</td>
-                                            <td>San Francisco</td>
-                                            <td>28</td>
-                                            <td>2011/06/07<br></td>
-                                            <td>$206,850</td>
-                                        </tr>
-                                        <tr>
-                                            <td><img class="rounded-circle mr-2" width="30" height="30" src="assets/img/avatars/avatar1.jpeg">Brielle Williamson</td>
-                                            <td>Integration Specialist</td>
-                                            <td>New York</td>
-                                            <td>61</td>
-                                            <td>2012/12/02<br></td>
-                                            <td>$372,000</td>
-                                        </tr>
-                                        <tr>
-                                            <td><img class="rounded-circle mr-2" width="30" height="30" src="assets/img/avatars/avatar2.jpeg">Bruno Nash<br></td>
-                                            <td>Software Engineer</td>
-                                            <td>London</td>
-                                            <td>38</td>
-                                            <td>2011/05/03<br></td>
-                                            <td>$163,500</td>
-                                        </tr>
-                                        <tr>
-                                            <td><img class="rounded-circle mr-2" width="30" height="30" src="assets/img/avatars/avatar3.jpeg">Caesar Vance</td>
-                                            <td>Pre-Sales Support</td>
-                                            <td>New York</td>
-                                            <td>21</td>
-                                            <td>2011/12/12<br></td>
-                                            <td>$106,450</td>
-                                        </tr>
-                                        <tr>
-                                            <td><img class="rounded-circle mr-2" width="30" height="30" src="assets/img/avatars/avatar4.jpeg">Cara Stevens</td>
-                                            <td>Sales Assistant</td>
-                                            <td>New York</td>
-                                            <td>46</td>
-                                            <td>2011/12/06<br></td>
-                                            <td>$145,600</td>
-                                        </tr>
-                                        <tr>
-                                            <td><img class="rounded-circle mr-2" width="30" height="30" src="assets/img/avatars/avatar5.jpeg">Cedric Kelly</td>
-                                            <td>Senior JavaScript Developer</td>
-                                            <td>Edinburgh</td>
-                                            <td>22</td>
-                                            <td>2012/03/29<br></td>
-                                            <td>$433,060</td>
+                                            <td>2</td>
+                                            <td>Emilia Harper</td>
+                                            <td>456-789-1230<br></td>
+                                            <td>e.Harper@yahoo.com</td>
+                                            <td class="text-center d-lg-flex justify-content-lg-center">
+                                                <button class="btn btn-primary" type="button" style="margin-left: 0px;margin-right: 5px;">Edit</button>
+                                                <button class="btn btn-primary" type="button" style="margin-right: 5px;background: var(--red);" href="javascript:void(0);" onclick="delTr(this);"></a>Delete</button>
+                                            </td>
                                         </tr>
                                     </tbody>
                                     <tfoot>
                                         <tr>
+                                            <td><strong>ID</strong></td>
                                             <td><strong>Name</strong></td>
-                                            <td><strong>Position</strong></td>
-                                            <td><strong>Office</strong></td>
-                                            <td><strong>Age</strong></td>
-                                            <td><strong>Start date</strong></td>
-                                            <td><strong>Salary</strong></td>
+                                            <td><strong>Phone</strong></td>
+                                            <td><strong>Email</strong></td>
+                                            <td><strong>Operation</strong></td>
                                         </tr>
                                     </tfoot>
                                 </table>
                             </div>
                             <div class="row">
                                 <div class="col-md-6 align-self-center">
-                                    <p id="dataTable_info" class="dataTables_info" role="status" aria-live="polite">Showing 1 to 10 of 27</p>
+                                    <p id="dataTable_info" class="dataTables_info" role="status" aria-live="polite">Showing 1 to 2 of 2</p>
                                 </div>
                                 <div class="col-md-6">
                                     <nav class="d-lg-flex justify-content-lg-end dataTables_paginate paging_simple_numbers">
                                         <ul class="pagination">
                                             <li class="page-item disabled"><a class="page-link" href="#" aria-label="Previous"><span aria-hidden="true">«</span></a></li>
                                             <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                                            <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                            <li class="page-item"><a class="page-link" href="#">3</a></li>
                                             <li class="page-item"><a class="page-link" href="#" aria-label="Next"><span aria-hidden="true">»</span></a></li>
                                         </ul>
                                     </nav>
@@ -217,6 +163,34 @@
     <script src="assets/js/fullcalendar/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
     <script src="assets/js/theme.js"></script>
+    <script>
+        document.getElementById('btn_add').onclick = function () {
+            let id = document.getElementById('id').value;
+            let name = document.getElementById('name').value;
+            let tel = document.getElementById('tel').value;
+            let email = document.getElementById('email').value;
+            let tbody = document.querySelector('tbody');
+
+            tbody.innerHTML += 
+            `<tr>
+                <td>${id}</td>
+                <td>${name}</td>
+                <td>${tel}</td>
+                <td>${email}</td>
+                <td class="text-center d-lg-flex justify-content-lg-center">
+                    <button class="btn btn-primary" type="button" style="margin-left: 0px;margin-right: 5px;">Edit</button>
+                    <button class="btn btn-primary" type="button" style="margin-right: 5px;background: var(--red);" href="javascript:void(0);" onclick="delTr(this);"></a>Delete</button>
+                </td>
+            </tr>
+            `;
+        }
+
+        function delTr(obj) {
+            let tbody = obj.parentNode.parentNode.parentNode;
+            let tr = obj.parentNode.parentNode;
+            tbody.removeChild(tr);
+        }
+    </script>
 </body>
 
 </html>
