updated background on index.html

--- a/Bootstrap Studio/Export with no changes/index.html
+++ b/Bootstrap Studio/Export with no changes/index.html
@@ -50,26 +50,26 @@
                         </ul>
                     </div>
                 </nav>
-                <section class="features-boxed">
-                    <div class="container" style="color: var(--purple);">
+                <section class="features-boxed" style="background: var(--fc-list-event-hover-bg-color);">
+                    <div class="container" style="color: var(--purple);background: var(--fc-list-event-hover-bg-color);">
                         <div class="intro">
                             <h2 class="text-center">SuperFrog Scheduler</h2>
                         </div>
                         <div class="row justify-content-center features">
                             <div class="col-sm-6 col-md-5 col-lg-4 item">
-                                <div class="box"><i class="fa fa-money icon" style="color: var(--purple);border-color: var(--purple);"></i>
+                                <div class="box" style="height: 470px;"><i class="fa fa-money icon" style="color: var(--purple);border-color: var(--purple);"></i>
                                     <h3 class="name" style="border-color: var(--purple);">Pricing</h3>
                                     <p class="description">ALL appearances are paid. Prices are based on a 1 hour appearance; additional fees may apply if more than one hour. SuperFrog, Showgirls, and Cheerleaders are individually priced. Payment must be made after receiving an appearance request approval email, and a minimum of 24 hours prior to the event or it will be canceled. <br></p>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-5 col-lg-4 item">
-                                <div class="box"><i class="fa fa-map-marker icon" style="color: var(--purple);"></i>
+                                <div class="box" style="height: 470px;"><i class="fa fa-map-marker icon" style="color: var(--purple);"></i>
                                     <h3 class="name" style="border-color: var(--purple);">Range</h3>
                                     <p class="description">We only service requests that are within 100 mile radius from Amon G. Carter Stadium.<br></p>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-5 col-lg-4 item">
-                                <div class="box"><i class="fa fa-calendar icon" style="color: var(--purple);"></i>
+                                <div class="box" style="height: 470px;"><i class="fa fa-calendar icon" style="color: var(--purple);"></i>
                                     <h3 class="name" style="border-color: var(--purple);">Request</h3>
                                     <p class="description">Request TCU Spirit from a calendar of available dates. Requests must be submitted at least 14 days prior to event date to be considered. Submission of a request does not guarantee the event will be accepted. TCU Spirit has until 5 days prior the date of the event to accept or decline a request.<br></p>
                                 </div>
