--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
+    <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css">
     <link rel="stylesheet" href="assets/css/Features-Boxed.css">
     <link rel="stylesheet" href="assets/css/fullcalendar/main.css">
     <link rel="stylesheet" href="assets/css/index.css">
@@ -39,16 +40,6 @@
                 <nav class="navbar navbar-light navbar-expand bg-white shadow mb-4 topbar static-top">
                     <div class="container-fluid"><button class="btn btn-link d-md-none rounded-circle mr-3" id="sidebarToggleTop" type="button"><i class="fas fa-bars"></i></button>
                         <ul class="navbar-nav flex-nowrap ml-auto">
-                            <li class="nav-item dropdown d-sm-none no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown" href="#"><i class="fas fa-search"></i></a>
-                                <div class="dropdown-menu dropdown-menu-right p-3 animated--grow-in" aria-labelledby="searchDropdown">
-                                    <form class="form-inline mr-auto navbar-search w-100">
-                                        <div class="input-group"><input class="bg-light form-control border-0 small" type="text" placeholder="Search for ...">
-                                            <div class="input-group-append"><button class="btn btn-primary py-0" type="button"><i class="fas fa-search"></i></button></div>
-                                        </div>
-                                    </form>
-                                </div>
-                            </li>
-                            <div class="d-none d-sm-block topbar-divider"></div>
                             <li class="nav-item dropdown no-arrow">
                                 <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown" href="#"><span class="d-none d-lg-inline mr-2 text-gray-600 small">Riley Durbin</span><img class="border rounded-circle img-profile" src="assets/img/avatars/Riley-headshot.jpg"></a>
                                     <div class="dropdown-menu shadow dropdown-menu-right animated--grow-in"><a class="dropdown-item" href="#"><i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Profile</a><a class="dropdown-item" href="#"><i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Settings</a><a class="dropdown-item" href="#"><i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Activity log</a>
@@ -59,26 +50,26 @@
                         </ul>
                     </div>
                 </nav>
-                <section class="features-boxed">
-                    <div class="container" style="color: var(--purple);">
+                <section class="features-boxed" style="background: var(--fc-list-event-hover-bg-color);">
+                    <div class="container" style="color: var(--purple);background: var(--fc-list-event-hover-bg-color);">
                         <div class="intro">
                             <h2 class="text-center">SuperFrog Scheduler</h2>
                         </div>
                         <div class="row justify-content-center features">
                             <div class="col-sm-6 col-md-5 col-lg-4 item">
-                                <div class="box"><i class="fa fa-money icon" style="color: var(--purple);border-color: var(--purple);"></i>
+                                <div class="box" style="height: 470px;"><i class="fa fa-money icon" style="color: var(--purple);border-color: var(--purple);"></i>
                                     <h3 class="name" style="border-color: var(--purple);">Pricing</h3>
                                     <p class="description">ALL appearances are paid. Prices are based on a 1 hour appearance; additional fees may apply if more than one hour. SuperFrog, Showgirls, and Cheerleaders are individually priced. Payment must be made after receiving an appearance request approval email, and a minimum of 24 hours prior to the event or it will be canceled. <br></p>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-5 col-lg-4 item">
-                                <div class="box"><i class="fa fa-map-marker icon" style="color: var(--purple);"></i>
+                                <div class="box" style="height: 470px;"><i class="fa fa-map-marker icon" style="color: var(--purple);"></i>
                                     <h3 class="name" style="border-color: var(--purple);">Range</h3>
                                     <p class="description">We only service requests that are within 100 mile radius from Amon G. Carter Stadium.<br></p>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-5 col-lg-4 item">
-                                <div class="box"><i class="fa fa-calendar icon" style="color: var(--purple);"></i>
+                                <div class="box" style="height: 470px;"><i class="fa fa-calendar icon" style="color: var(--purple);"></i>
                                     <h3 class="name" style="border-color: var(--purple);">Request</h3>
                                     <p class="description">Request TCU Spirit from a calendar of available dates. Requests must be submitted at least 14 days prior to event date to be considered. Submission of a request does not guarantee the event will be accepted. TCU Spirit has until 5 days prior the date of the event to accept or decline a request.<br></p>
                                 </div>
@@ -96,6 +87,9 @@
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/Bootstrap-DateTime-Picker-1.js"></script>
+    <script src="assets/js/Bootstrap-DateTime-Picker-2.js"></script>
+    <script src="assets/js/Bootstrap-DateTime-Picker.js"></script>
     <script src="assets/js/fullcalendar/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
     <script src="assets/js/theme.js"></script>
